# MeshCNN

./: .gitignore  001  README.md  error_model.txt  show_model.py  soft_label.txt  test.h  test.py  test.vtk  train.py  val.py
data/: __init__.py  base_dataset.py  classification_data.py  deal_data.py  segmentation_data.py
deal_data/: Data FLower.md  Data FLower.xmind  Mesh_Simplifier.py  check_model.ipynb  data_preprocess.py  deal_data_Class.py  deal_file.ipynb  deal_label_from_streamflow.ipynb  moveBadData.py  readme.md  show_data.py  test.vtk  test_AddFixture.py  up_label.ipynb
deal_data/.ipynb_checkpoints/: deal_data_Class-checkpoint.ipynb
deal_data/file/seg/: 1PT7E_VS_SET_VSc2_Subsetup_Retainer_Maxillar.eseg
deal_data/file/show/1PT7E_VS_SET_VSc2_Subsetup_Retainer_Maxillar/: test.vtk
deal_data/file/sseg/: 1PT7E_VS_SET_VSc2_Subsetup_Retainer_Maxillar.seseg
evaluation/: README.md  error.txt  error_label.txt  error_label1.txt  evaluate_testsets.py  show_pts.py  test.py
inference/: 02-Mar-21-10:02:10-gpu_mem_track.txt  README.md  ai_error_model.txt  config.py  convert_model.py  edges - 副本.txt  edges.txt  example_webclient.py  example_webclient_form.py  example_webserver.py  faces - 副本.txt  faces.txt  gpu_mem_track.py  inference_class.py  label.txt  predict.py  predict_class.pts  predict_class.py  predict_class1_459650_1_L_24_1.txt  predict_with_net_model.py  pts_ids.txt  show_result.py  test.pts  test_np.py  vs - 副本.pts  vs.txt  webserver.py
inference/AI_model/: mean_std_cache.p
inference/data_deal/: data_preprocess.py
inference/mesh_net/: README.md  deal_result.py  mesh.py  mesh_process.py  mesh_union.py  network.py  network_bak.py  setup.py
inference/results/1AQ9W_VS_SET_VSc1_Subsetup6_Maxillar/: predict.vtk
inference/test_circle/: predict_class1.pts  predict_class2.pts  predict_class3.pts
inference_C++/: README.md  show_result.py
inference_C++/C++CallPython/: CMakeLists.txt  config.py  inference_class.py  meshCNN.cpp  meshCNN.h
inference_C++/C++CallPython/ssd/: CMakeLists.txt  TargetDetection.cpp  inferencePb.py
inference_C++/C++CallPython/test/: CMakeLists.txt  add.cpp  add.py  hello.cpp  hello.py  test_class.cpp  test_class.py
inference_C++/HTTP_Server/: DentalTexture.cpp  DentalTexture.h  MeshCNNHTTP.cpp  MeshCNNHTTP.h
inference_C++/mesh_net/: mesh_process.py  network.py  network_bak.py
inference_C++/results/1AQ9W_VS_SET_VSc1_Subsetup6_Maxillar/: predict.pts
inference_http/: config.py  example_webclient.py  example_webclient_form.py  inference_class.py  testbase64.txt  webserver.py
inference_http/mesh_net/: mesh.cp37-win_amd64.pyd  mesh_process.cp37-win_amd64.pyd  mesh_union.cp37-win_amd64.pyd  network.cp37-win_amd64.pyd
inference_libtorch/: predict.py  predict_with_net_model.py
inference_libtorch/mesh_net/: network_bak.py
inference_libtorch/results/1AQ9W_VS_SET_VSc1_Subsetup6_Maxillar/: predict.vtk
models/: __init__.py  mesh_classifier.py  networks.py
models/layers/: mesh.py  mesh_conv.py  mesh_pool.py  mesh_prepare.py
options/: base_options.py  test_options.py  train_options.py  val_options.py
scripts/: test_general.py
scripts/coseg_seg/: val.sh
scripts/cubes/: val.sh
scripts/dataprep/: down_sample.py
scripts/human_seg/: train.sh  val.sh  view.sh
scripts/shrec/: val.sh
scripts/tooth_seg/: test.sh  train.sh  val.sh  view.sh
util/: mesh_viewer.py  util.py  writer.py
